--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
         "core-js": "^3.8.3",
         "dayjs": "^1.11.11",
         "element-ui": "^2.15.14",
+        "fabric": "^5.3.0",
+        "fabric-with-erasing": "^1.0.1",
         "node-sass": "^9.0.0",
         "scss": "^0.2.4",
         "vue": "^2.6.14",
+        "vue-color": "^2.8.1",
         "vue-router": "^3.6.5"
     },
     "devDependencies": {
