--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "element-ui": "^2.15.14",
         "fabric": "^5.3.0",
         "fabric-with-erasing": "^1.0.1",
+        "hotkeys-js": "^3.13.7",
         "node-sass": "^9.0.0",
         "scss": "^0.2.4",
         "vue": "^2.6.14",
