--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "scss": "^0.2.4",
         "vue": "^2.6.14",
         "vue-color": "^2.8.1",
-        "vue-router": "^3.6.5"
+        "vue-router": "^3.6.5",
+        "vuex": "^3.6.2"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
