--- a/package.json
+++ b/package.json
@@ -1,60 +1,63 @@
 {
-    "name": "youyi_project",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve --open",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
-    },
-    "dependencies": {
-        "axios": "^1.6.8",
-        "core-js": "^3.8.3",
-        "dayjs": "^1.11.11",
-        "element-ui": "^2.15.14",
-        "fabric": "^5.3.0",
-        "fabric-with-erasing": "^1.0.1",
-        "hotkeys-js": "^3.13.7",
-        "node-sass": "^9.0.0",
-        "scss": "^0.2.4",
-        "vue": "^2.6.14",
-        "vue-color": "^2.8.1",
-        "vue-router": "^3.6.5",
-        "vuex": "^3.6.2"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.16",
-        "@babel/eslint-parser": "^7.12.16",
-        "@types/vue": "^2.0.0",
-        "@vue/cli-plugin-babel": "~5.0.0",
-        "@vue/cli-plugin-eslint": "~5.0.0",
-        "@vue/cli-service": "~5.0.0",
-        "eslint": "^7.32.0",
-        "eslint-plugin-vue": "^8.0.3",
-        "sass-loader": "^14.2.1",
-        "ts-loader": "^9.5.1",
-        "typescript": "^5.4.5",
-        "vue-class-component": "^7.2.6",
-        "vue-property-decorator": "^9.1.2",
-        "vue-template-compiler": "^2.6.14"
-    },
-    "eslintConfig": {
-        "root": true,
-        "env": {
-            "node": true
-        },
-        "extends": [
-            "plugin:vue/essential",
-            "eslint:recommended"
-        ],
-        "parserOptions": {
-            "parser": "@babel/eslint-parser"
-        },
-        "rules": {}
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions",
-        "not dead"
-    ]
+	"name": "youyi_project",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve --open",
+		"build": "vue-cli-service build",
+		"lint": "vue-cli-service lint"
+	},
+	"dependencies": {
+		"axios": "^1.6.8",
+		"core-js": "^3.8.3",
+		"dayjs": "^1.11.11",
+		"element-ui": "^2.15.14",
+		"fabric": "^5.3.0",
+		"fabric-with-erasing": "^1.0.1",
+		"hotkeys-js": "^3.13.7",
+		"node-sass": "^9.0.0",
+		"scss": "^0.2.4",
+		"three": "^0.168.0",
+		"vue": "^2.6.14",
+		"vue-color": "^2.8.1",
+		"vue-router": "^3.6.5",
+		"vuex": "^3.6.2"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.16",
+		"@babel/eslint-parser": "^7.12.16",
+		"@types/vue": "^2.0.0",
+		"@vue/cli-plugin-babel": "~5.0.0",
+		"@vue/cli-plugin-eslint": "~5.0.0",
+		"@vue/cli-service": "~5.0.0",
+		"eslint": "^7.32.0",
+		"eslint-plugin-vue": "^8.0.3",
+		"sass-loader": "^14.2.1",
+		"ts-loader": "^9.5.1",
+		"typescript": "^5.4.5",
+		"vue-class-component": "^7.2.6",
+		"vue-property-decorator": "^9.1.2",
+		"vue-template-compiler": "^2.6.14"
+	},
+	"eslintConfig": {
+		"root": true,
+		"env": {
+			"node": true
+		},
+		"extends": [
+			"plugin:vue/essential",
+			"eslint:recommended"
+		],
+		"parserOptions": {
+			"parser": "@babel/eslint-parser"
+		},
+		"rules": {
+			"no-mixed-spaces-and-tabs": 0
+		}
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not dead"
+	]
 }
