--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
+		"@ant-design/icons": "^5.5.1",
 		"axios": "^1.6.8",
 		"core-js": "^3.8.3",
 		"dayjs": "^1.11.11",
