--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"@ant-design/icons": "^5.5.1",
+		"ant-design-vue": "^1.7.8",
 		"axios": "^1.6.8",
 		"core-js": "^3.8.3",
 		"dayjs": "^1.11.11",
