--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"fabric": "^5.3.0",
 		"fabric-with-erasing": "^1.0.1",
 		"hotkeys-js": "^3.13.7",
-		"node-sass": "^9.0.0",
+		"sass": "^1.79.4",
 		"scss": "^0.2.4",
 		"three": "^0.148.0",
 		"vue": "^2.6.14",
