--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"three": "^0.148.0",
 		"vue": "^2.6.14",
 		"vue-color": "^2.8.1",
+		"vue-fullscreen": "^2.6.1",
 		"vue-router": "^3.6.5",
 		"vuex": "^3.6.2"
 	},
